--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,4 @@
 ---
-import Welcome from "../components/Welcome.astro";
-import Layout from "../layouts/Layout.astro";
+// Redirect to the flashcard generator page
+return Astro.redirect('/app/generate');
 ---
-
-<Layout>
-  <Welcome />
-</Layout>
