--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,13 @@
 ---
-// Redirect to the flashcard generator page
-return Astro.redirect('/app/generate');
+import Layout from '@/layouts/Layout.astro';
+import Welcome from '@/components/Welcome.astro';
+
+const { user } = Astro.locals;
+if (user) {
+  return Astro.redirect('/app/generate');
+}
 ---
+
+<Layout title="Witaj w 10xFlashAI">
+  <Welcome />
+</Layout>
